# Fuzzy-Scan

./: 1  2  BUILD.ps1  CMakeLists.txt  PATH.ps1  README.md  gen.py  gui.py  main.py  settings.json
src/: fuzzy.cpp  main.cpp
